--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 		<title> Traze Sotfware Components</title>
+		<!--
+		<% for (var css in htmlWebpackPlugin.files.css) { %>
+			<link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+		<% } %>
+		-->
+		<!--
+    <script type="module" src="./js/containers/traze-dropdown.js"></script>
+		--!>
+
+		<!--
     <link href="styles/app.css" rel="stylesheet" type="text/css" />
+		-->
   </head>
   <body>
     <div>
@@ -14,9 +25,10 @@
 
 				this is our project
         <item-control></item-control>
+				<my-rating>
+				</my-rating>
       </div>
     </div>
-		<script src="build/components.bundle.js"></script>
 
 		<!--
     <script src="build/traze-web-components.bundle-ad9f6e6e35b7fb132eb1.js"></script>
